still strunggling to solve height on mobile

--- a/src/Explore.scss
+++ b/src/Explore.scss
@@ -40,11 +40,6 @@
 }
 
 .landing1,
-.explore1 {
-  height: calc(100vh - 100px);
-}
-
-.landing1,
 .explore1,
 .content1 {
   position: relative;
